Compila per Java 8 per compatibilita' con PC aziendali con JRE datata
Il PC di test aveva Java 8 (1.8.0_281): il jar precedente richiedeva
Java 11 e falliva con UnsupportedClassVersionError. Abbassato il target
di compilazione a 8 e sostituito l'uso di List.of (Java 9+) con
Arrays.asList per compatibilita'.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ChKxNx5jPtFFWJmcUe6KTW